2004-06-02  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CommonAboutDialog.cs: This is actually how translator
	credits are supposed to work. Update the po and go ahead and
	translate the string "translator_credits" to include what you want
	it to include. It will then show up properly.

2004-06-02  Todd Berman  <tberman@sevenl.net>

	* MonoDevelop.Base.prjx: fixed ICSharpCode.SharpZipLib reference and
	added new file.
	* Gui/Dialogs/CombineConfiguration/CombineBuildOptions.cs: new dialog
	for the .mdsx relative output build path.
	* Makefile.am: add new file.
	* Internal/Project/Combine/Combine.cs: Add BaseDirectory property.
	* Makefile.MonoDevelop.Base: automagic updates to reflect new file
	(This is good to see).

2004-05-30  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands: Remove some dead code.
	* Services/ParserService/DefaultParserService.cs: Properly setup
	the pathing so it works without an existing setup.

2004-05-30  Lluis Sanchez Gual  <lluis@ximian.com>

	* Services/ParserService/DefaultParserService.cs: Don't use the "Gac:"
	  prefix to reference gac assemblies, they are handled internally by
	  AssemblyCodeCompletionDatabase.
	  When locating an assembly database, take into account partial names,
	  and avoid loading the same db twice.
	  Perform the modified file check taking into account dependencies
	  between databases. This increases the posibility of resolving all classes
	  of a database in the first parse cycle (since its dependecies will be
	  already parsed).
	  Added parameter to GetClass which allows deep search of a class in all
	  project references.
	  In ResolveTypes, added out parameter to inform if all types could be
	  resolved.
	  In ClassInheritanceEnumerator, use a reference deep search to get base
	  classes.
	  
	* IParserService.cs: Added parameter to GetClass which allows deep search of
	  a class in all project references.
	  
	* CodeCompletionDatabase.cs: Increased db version, since the format has